--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		</div><!-- /.container -->
 	</div><!-- /.navbar -->
 
-  <div class="codelf"><a href="http://unbug.github.io/codelf/" class="re-link">Search over projects from Github, Bitbucket, Google Code and more to find real-world usage variable names</a></div>
+  <div class="codelf"><a href="http://unbug.github.io/codelf/" class="re-link">Codelf - Best GitHub stars tagger and organizer</a></div>
 
 	<!-- === Arrows === -->
 	<div id="arrows">
