--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 		              <ul>
 		                <li>Paul Bakaus(Studio 5 CTO at Zynga) :&nbsp;<a class="re-link" href="http://paulbakaus.com/tutorials/performance/mihtool-the-ios-web-debugger/">MIHTool, the iOS web debugger</a></li>
 		                <li>GoogleDevelopers :&nbsp;<a class="re-link"  href="https://www.youtube.com/watch?v=jXqrgtm-yF8">Mobile Web Thursday : Dev Tools</a></li>
-		                <li>Google I/O 2013 :&nbsp;<a class="re-link" href="https://developers.google.com/events/io/sessions/324558168">The Modern Workflow for Developing the Mobile Web</a>&nbsp;(By&nbsp;<a class="re-link"  href="http://gauntface.co.uk/">Matt Gaunt</a>),&nbsp;<a href="http://io13mobileworkflow.appspot.com/">Slide</a></li>
+		                <li>Google I/O 2013 :&nbsp;<a class="re-link" href="https://developers.google.com/events/io/sessions/324558168">The Modern Workflow for Developing the Mobile Web</a>&nbsp;(By&nbsp;<a class="re-link"  href="http://gauntface.co.uk/">Matt Gaunt</a>),&nbsp;<a class="re-link" href="http://io13mobileworkflow.appspot.com/#17">Slide</a></li>
 		                <li>Frontrend in Tokyo :&nbsp;<a class="re-link" href="https://speakerdeck.com/addyosmani/mobile-web-development-workflow">Mobile Web Development Workflow</a>&nbsp;(by<a class="re-link"  href="http://addyosmani.com/"> Addy Osmani</a>)</li>
 		                <li>Jan Polzer: <a class="re-link" href="http://www.maxiorel.cz/jak-na-vzdalene-ladeni-webu-na-ipadu-pomoci-mihtool">Jak na to – vzdálené ladění webu na iPadu pomocí MIHTool</a></li>
 		                <li>Tribo do C.I.Podcast :&nbsp;<a class="re-link" href="http://tribodoci.net/artigos/mihtool-faca-os-seus-aplicativos-web-para-ios-acontecer/">MIHTOOL: FAÇA OS SEUS APLICATIVOS WEB PARA IOS ACONTECER</a></li>
