--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div id="home-row-1" class="row clearfix">
 				<div class="col-12">
 					<img src="images/mih/logo/iPad-Retina.png" width="80"/>
-					<h1 class="font-semibold">MIHTool <span class="font-thin"><a class="top_version" href="#slide-9" onclick="goToByScroll(9)">6.1</a></span></h1>
+					<h1 class="font-semibold">MIHTool <span class="font-thin"><a class="top_version" href="#slide-9" onclick="goToByScroll(9)">6.2</a></span></h1>
 					<h4 class="font-thin">MIHTool helps Front-End Engineers to  <span class="font-semibold">debug</span> and  <span class="font-semibold">optimize</span> their webpages on iPad and iPhone</h4>
 					<br>
 					<br>
@@ -570,7 +570,7 @@
 				<div class="col-12 font-light">
 					<section class="left-ajust">
 		              <ul>
-		                <li>Paul Bakaus(Studio 5 CTO at Zynga) :&nbsp;<a class="re-link" href="http://paulbakaus.com/tutorials/performance/mihtool-the-ios-web-debugger/">MIHTool, the iOS web debugger</a></li>
+		                <li><a href="https://twitter.com/pbakaus" target="_blank" class="re-link">Paul Bakaus</a> (Open Web Developer Advocate at Google) :&nbsp;<a class="re-link" href="http://paulbakaus.com/tutorials/performance/mihtool-the-ios-web-debugger/">MIHTool, the iOS web debugger</a></li>
 		                <li>GoogleDevelopers :&nbsp;<a class="re-link"  href="https://www.youtube.com/watch?v=jXqrgtm-yF8">Mobile Web Thursday : Dev Tools</a></li>
 		                <li>Google I/O 2013 :&nbsp;<a class="re-link" href="https://developers.google.com/events/io/sessions/324558168">The Modern Workflow for Developing the Mobile Web</a>&nbsp;(By&nbsp;<a class="re-link"  href="http://gauntface.co.uk/">Matt Gaunt</a>),&nbsp;<a class="re-link" href="http://io13mobileworkflow.appspot.com/#17">Slide</a></li>
 		                <li>Frontrend in Tokyo :&nbsp;<a class="re-link" href="https://speakerdeck.com/addyosmani/mobile-web-development-workflow">Mobile Web Development Workflow</a>&nbsp;(by<a class="re-link"  href="http://addyosmani.com/"> Addy Osmani</a>)</li>
@@ -618,8 +618,8 @@
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 font-light left-ajust">
 	              <ul>
-	                <li><a class="re-link" href="http://paulbakaus.com/" target="_blank">Paul Bakaus</a>(Studio 5 CTO at Zynga)'s features guidance</li>
-	                <li>App Icon designed by&nbsp;<a class="re-link" href="https://twitter.com/Rude" target="_blank">Rude</a>(Graphic and interaction design specialist at Mortensen)</li>
+	                <li>Guided by <a class="re-link" href="https://twitter.com/pbakaus" target="_blank">Paul Bakaus</a> (Open Web Developer Advocate at Google)</li>
+	                <li>App Icon designed by&nbsp;<a class="re-link" href="https://twitter.com/Rude" target="_blank">Rude</a></li>
 	              </ul>
 				</div>
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
@@ -675,6 +675,38 @@
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 font-light left-ajust">
 					<div class="panel-group" id="log_accordion">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#log_accordion" href="#log_v6_2">
+                    V6.2-2017.05.01
+                  </a>
+                </h4>
+              </div>
+              <div id="log_v6_2" class="panel-collapse collapse in">
+                <div class="panel-body">
+                  <p>
+                    For iPad <br>
+                    1. !+Add, HTTPS Supports. <br>
+                    2. !+Add, New inspector UI. <br>
+                    3. !+Add, More than 45+ UserAgents.<br>
+                    4. !+Add, Emulate iPhone 7 sizes.<br>
+                    5. !*Fix, Source viewer, HAR viewer not working on iOS 9+.<br>
+                    6. *Fix, HAR formats.<br>
+                    7. -Remove, Some bookmarks.<br>
+                    8. !-Remove, No long support iOS 7.<br>
+                    <br>
+                    For iPhone <br>
+                    1. !+Add, HTTPS Supports. <br>
+                    2. !+Add, New inspector UI. <br>
+                    3. !+Add, iPhone 6 later device supports.<br>
+                    4. !*Fix, About, History not working on iOS 9+.<br>
+                    5. *Fix, HAR formats.<br>
+                    6. !-Remove, No long support iOS 7.<br>
+                  </p>
+                </div>
+              </div>
+            </div>
 					  <div class="panel panel-default">
 					    <div class="panel-heading">
 					      <h4 class="panel-title">
@@ -704,7 +736,7 @@
 					        </a>
 					      </h4>
 					    </div>
-					    <div id="log_v6_0" class="panel-collapse collapse in">
+					    <div id="log_v6_0" class="panel-collapse collapse">
 					      <div class="panel-body">
 					      	<p>For iPad<br>
 								1.!+Add,NPM Modules (To require() any module on npm in web inspector console with browserify).<br>
