--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
 	<!-- === SLide 3 - Portfolio -->
 	<div class="slide story" id="slide-3" data-slide="3">
 		<div class="row">
-			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/0.png"><img class="thumb" src="images/mih/screenshots/0.png" alt=""></a></div>
-			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/1.png"><img class="thumb" src="images/mih/screenshots/1.png" alt=""></a></div>
-			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/2.png"><img class="thumb" src="images/mih/screenshots/2.png" alt=""></a></div>
-			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/3.png"><img class="thumb" src="images/mih/screenshots/3.png" alt=""></a></div>
-			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/4.png"><img class="thumb" src="images/mih/screenshots/4.png" alt=""></a></div>
-			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/5.png"><img class="thumb" src="images/mih/screenshots/5.png" alt=""></a></div>
-			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/6.png"><img class="thumb" src="images/mih/screenshots/6.png" alt=""></a></div>
-			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/7.png"><img class="thumb" src="images/mih/screenshots/7.png" alt=""></a></div>
-			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/8.png"><img class="thumb" src="images/mih/screenshots/8.png" alt=""></a></div>
+			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/0.jpeg"><img class="thumb" src="images/mih/screenshots/0.jpeg" alt=""></a></div>
+			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/1.jpeg"><img class="thumb" src="images/mih/screenshots/1.jpeg" alt=""></a></div>
+			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/2.jpeg"><img class="thumb" src="images/mih/screenshots/2.jpeg" alt=""></a></div>
+			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/3.jpeg"><img class="thumb" src="images/mih/screenshots/3.jpeg" alt=""></a></div>
+			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/4.jpeg"><img class="thumb" src="images/mih/screenshots/4.jpeg" alt=""></a></div>
+			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/5.jpeg"><img class="thumb" src="images/mih/screenshots/5.jpeg" alt=""></a></div>
+			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/6.jpeg"><img class="thumb" src="images/mih/screenshots/6.jpeg" alt=""></a></div>
+			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/7.jpeg"><img class="thumb" src="images/mih/screenshots/7.jpeg" alt=""></a></div>
+			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/8.jpeg"><img class="thumb" src="images/mih/screenshots/8.jpeg" alt=""></a></div>
 		</div><!-- /row -->
 	</div><!-- /slide3 -->
 
@@ -179,7 +179,7 @@
 			              	<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_1">Learn More...</button>
 			              	<section id="features_ipad_1" class="features-detail collapse row">
 			              		<div class="col-6">
-				              		<img src="images/mih/screenshots/0.png"/>
+				              		<img src="images/mih/screenshots/0.jpeg"/>
 			              		</div>
 			              		<div class="col-6">
 			              			Inline Web inspector is an iPad only feature.Which makes you possible to inspector your webpages right on your iPad without a desktop computer.
@@ -208,8 +208,8 @@
 			              			Web inspector is based on <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a>,bug reports please check <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a>.
 			              		</div>
 			              		<div class="col-6">
-				              		<img src="images/mih/screenshots/8.png">
-				              		<img src="images/mih/screenshots/3.png"/>
+				              		<img src="images/mih/screenshots/8.jpeg">
+				              		<img src="images/mih/screenshots/3.jpeg"/>
 			              		</div>
 			              	</section>
 			              </p>
@@ -227,7 +227,7 @@
 			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_4">Learn More...</button>
 				              	<section id="features_ipad_4" class="features-detail collapse row">
 				              		<div class="col-6">
-				              			<img src="images/mih/screenshots/2.png"/>
+				              			<img src="images/mih/screenshots/2.jpeg"/>
 				              		</div>
 				              		<div class="col-6">
 				              			HTML editor is an iPad only feature.Which makes you possible to view and edit any webpages source code with syntax highlighting right on your iPad.
@@ -251,7 +251,7 @@
 				              			All remote commands are REST like so you can write some auto-run scripts to automatically test your wepages.This is very conveniently for you to control multi devices form a single computer at the same time.
 				              		</div>
 				              		<div class="col-6">
-				              			<img src="images/mih/screenshots/4.png"/>
+				              			<img src="images/mih/screenshots/4.jpeg"/>
 				              		</div>
 				              	</section>
 			              </p>
@@ -259,7 +259,7 @@
 			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_6">Learn More...</button>
 			              		<section id="features_ipad_6" class="features-detail collapse row">
 				              		<div class="col-6">
-				              			<img src="images/mih/screenshots/1.png"/>
+				              			<img src="images/mih/screenshots/1.jpeg"/>
 				              		</div>
 				              		<div class="col-6">
 				              			Show WebKit Debug Borders(Compositing Render Layers) and Show Webkit Repaint Counter(Paint Rects) is a way for you
@@ -309,7 +309,7 @@
 				              			HAR Viewer is iPad only,for iPhone you can use remote control to export HAR data and view in <a class="re-link" href="http://www.softwareishard.com/har/viewer/">Online HAR Viewer</a>(Be sure the "Validate data before processing?" box is un-checked .)
 				              		</div>
 				              		<div class="col-6">
-				              			<img src="images/mih/screenshots/5.png"/>
+				              			<img src="images/mih/screenshots/5.jpeg"/>
 				              		</div>
 				              	</section>
 			              </p>
@@ -373,7 +373,7 @@
 					  		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_1">了解更多...</button>
 			              	<section id="features_ipad_zh_1" class="features-detail collapse row">
 			              		<div class="col-6">
-				              		<img src="images/mih/screenshots/0.png"/>
+				              		<img src="images/mih/screenshots/0.jpeg"/>
 			              		</div>
 			              		<div class="col-6">
 			              			内嵌 Web inspector是iPad独占的。你可以直接在自己的iPad上调试自己的页面。
@@ -401,8 +401,8 @@
 			              			Web inspector 是基于 <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a> 的,bug 可以报到 <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a> 上。
 			              		</div>
 			              		<div class="col-6">
-				              		<img src="images/mih/screenshots/8.png">
-				              		<img src="images/mih/screenshots/3.png"/>
+				              		<img src="images/mih/screenshots/8.jpeg">
+				              		<img src="images/mih/screenshots/3.jpeg"/>
 			              		</div>
 			              	</section>
 						</p>
@@ -420,7 +420,7 @@
 								<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_4">了解更多...</button>
 				              	<section id="features_ipad_zh_4" class="features-detail collapse row">
 				              		<div class="col-6">
-				              			<img src="images/mih/screenshots/2.png"/>
+				              			<img src="images/mih/screenshots/2.jpeg"/>
 				              		</div>
 				              		<div class="col-6">
 				              			HTML editor 编辑器是iPad独占的功能。查看网页源码;格式化及高亮源码;编辑源码或者新建一个页面并预览结果。
@@ -440,7 +440,7 @@
 				              			远程控制的命令是 REST 风格的，你可以写一些自动化脚本来自动化测试你的页面。实现从一台远程电脑控制多台设备同时调试。
 				              		</div>
 				              		<div class="col-6">
-				              			<img src="images/mih/screenshots/4.png"/>
+				              			<img src="images/mih/screenshots/4.jpeg"/>
 				              		</div>
 				              	</section>
 						</p>
@@ -448,7 +448,7 @@
 							<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_6">了解更多...</button>
 			              		<section id="features_ipad_zh_6" class="features-detail collapse row">
 				              		<div class="col-6">
-				              			<img src="images/mih/screenshots/1.png"/>
+				              			<img src="images/mih/screenshots/1.jpeg"/>
 				              		</div>
 				              		<div class="col-6">
 				              			显示页面合成渲染层(Compositing Render Layers) 和 显示元素的重绘渲染数(Paint Rects) 是帮助你优化页面得到 60FPS 的得力助手。
@@ -497,7 +497,7 @@
 				              			HAR Viewer 是iPad独有的，在 iPhone 上你也可以通过远程控制导出 HAR 数据然后放到<a class="re-link" href="http://www.softwareishard.com/har/viewer/">Online HAR Viewer</a> 查看(需要去掉 "Validate data before processing?" 复选框的勾选.)
 				              		</div>
 				              		<div class="col-6">
-				              			<img src="images/mih/screenshots/5.png"/>
+				              			<img src="images/mih/screenshots/5.jpeg"/>
 				              		</div>
 				              	</section>
 						</p>
