--- a/index.html
+++ b/index.html
@@ -1130,8 +1130,6 @@
 	<script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
 	<script src="js/script.js"></script>
 	<script src="js/share.min.js"></script>
-
-
 	<!-- fancybox init -->
 	<script>
 	$(document).ready(function(e) {
@@ -1160,14 +1158,25 @@
 	});
 	new Share('.share-button');
 	</script>
-	<script type="text/javascript">
-	    var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-	    document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fa45d0c08b83f49f9f9340e5e32050126' type='text/javascript'%3E%3C/script%3E"));
-	    (function(){
-	      var t = 0;
-	      function hb(){
-	      var aa = document.querySelectorAll('a');for(var i=0;i<aa.length;i++){if(/tongji/g.test(aa[i].href)){aa[i].style.display='none';clearInterval(t);break;};}}
-	      t = setInterval(hb,1000);
-	    })();
-	</script>
+  <script type="text/javascript">
+    (function(s, d, f) {
+      d = document, f = document.createElement('iframe');
+      f.src = '//www.mihtool.com/analytics.html?' + (s || '');
+      f.setAttribute('border', 'no');
+      f.setAttribute('frameborder', '0');
+      f.style.display = 'none';
+      f.style = "display: none; width: 0%; height: 0;";
+      d.body.appendChild(f);
+    }('mihtool.com'));
+  </script>
+	<!--<script type="text/javascript">-->
+	    <!--var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");-->
+	    <!--document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fa45d0c08b83f49f9f9340e5e32050126' type='text/javascript'%3E%3C/script%3E"));-->
+	    <!--(function(){-->
+	      <!--var t = 0;-->
+	      <!--function hb(){-->
+	      <!--var aa = document.querySelectorAll('a');for(var i=0;i<aa.length;i++){if(/tongji/g.test(aa[i].href)){aa[i].style.display='none';clearInterval(t);break;};}}-->
+	      <!--t = setInterval(hb,1000);-->
+	    <!--})();-->
+	<!--</script>-->
 </html>
