optimize for mobile

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				</div><!-- /col12 -->
 				<div class="col-12 col-lg-3 col-sm-6">
 					<h2 class="font-semibold">Feedback</h2>
-					<h4 class="font-thin"><a target="_blank" class="btn btn-info btn-lg re-link" role="button" href="https://groups.google.com/group/mihtool">Google group</a></h4>
+					<h4 class="font-thin"><a target="_blank" class="btn btn-info btn-lg re-link" role="button" href="#slide-5" onclick="goToByScroll(6)">GitHub</a></h4>
 				</div><!-- /col12 -->
 				<div class="col-12 col-lg-3 col-sm-6" style="padding-right: 0;">
 					<h2 class="font-semibold">Learn More</h2>
