fixed iPhone size

--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
               <p>1.Action Extension for Safari, brings remote Web Inspector to debug your webpages in Safari. A Inline Web Inspector that is a real Chrome like DevTool for iPad Safari.
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_1">Learn More...</button>
                 <section id="features_ipad_1" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/9.jpeg"/>
                     <img src="images/mih/screenshots/3.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     MIHToo Action Extension for Safari is the first App that brings a real Chrome like Inline DevTool for iPad Safari.
                     Now, you can inspector your web pages in iOS Safari and Safari View Controller right on your iPad without a desktop computer.
                     You can also remote Web Inspector to debug your webpages in Safari and Safari View Controller.
@@ -199,10 +199,10 @@
               <p>2.Inline Web inspector(like Chrome DevTool or FireBug):With Elements,Resources,Network,Timeline,Console panel.
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_2">Learn More...</button>
                 <section id="features_ipad_2" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/0.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     Inline Web inspector is an iPad only feature.Which makes you possible to inspector your webpages right on your iPad without a desktop computer.
                     <br />
                     Just like Chrome DevTools,it has Elements,Resources,Network,Timeline and Console panel.And it totaly optimized for touch screen.
@@ -219,7 +219,7 @@
               <p>3.Web inspector remote(weinre):remote to debug and optimize your mobile webpages on your computer(window,mac,linux with chrome).
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_3">Learn More...</button>
                 <section id="features_ipad_3" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     Web inspector remote makes you possible to inspector your webpages with any remote computer(window,mac,linux,or another iPad) in the same local network.
                     <br />
                     Just like Chrome DevTools,it has Elements,Resources,Network,Timeline and Console panel.
@@ -228,7 +228,7 @@
                     <br />
                     Web inspector is based on <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a>,bug reports please check <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a>.
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/8.jpeg">
                     <img src="images/mih/screenshots/3.jpeg"/>
                   </div>
@@ -247,10 +247,10 @@
               <p>5.HTML editor:view webpage source code with syntax highlighting and formatting;editing source code or creare a new webpage and preview the result.
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_5">Learn More...</button>
                 <section id="features_ipad_5" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/2.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     HTML editor is an iPad only feature.Which makes you possible to view and edit any webpages source code with syntax highlighting right on your iPad.
                     <br />
                     Sure you can create a new webpage with HTML editor and view the result,you also can format source codes or just share them with your friends.
@@ -262,7 +262,7 @@
               <p>6.Remote control(With HTTP Server):Remote to,Load URL in MIHTool|Safari|Chrome;Inject Javascript in current webpage;Clear website data;Get HAR data;Get source code;Get screenshots…
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_6">Learn More...</button>
                 <section id="features_ipad_6" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     Turn ON MIHTool's HTTP Server you will get a HTTP link like <strong>http://192.168.1.101:1630</strong>,this link allows you to be able to remote control MIHTool from any remote computer(window,mac,linux,or another iPad) in the same local network.
                     <br />
                     Open the HTTP link from a remote computer,you will see many commands are available for you.
@@ -271,7 +271,7 @@
                     <br />
                     All remote commands are REST like so you can write some auto-run scripts to automatically test your wepages.This is very conveniently for you to control multi devices form a single computer at the same time.
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/4.jpeg"/>
                   </div>
                 </section>
@@ -279,10 +279,10 @@
               <p>7.Show WebKit Debug Borders(Compositing Render Layers).
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_7">Learn More...</button>
                 <section id="features_ipad_7" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/1.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     Show WebKit Debug Borders(Compositing Render Layers) and Show Webkit Repaint Counter(Paint Rects) is a way for you
                     to optimize your web apps and make them 60FPS performance.
                     <br />
@@ -324,12 +324,12 @@
               <p>17.HAR Viewer.(Also see <a target="_blank" class="re-link" href="https://github.com/unbug/logproxy">logproxy</a>)
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_17">Learn More...</button>
                 <section id="features_ipad_17" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     With HAR Viewer you can see your webpages network traffic waterfall and export the HAR data for more advanced research.
                     <br />
                     HAR Viewer is iPad only,for iPhone you can use remote control to export HAR data and view in <a class="re-link" href="http://www.softwareishard.com/har/viewer/">Online HAR Viewer</a>(Be sure the "Validate data before processing?" box is un-checked .)
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/5.jpeg"/>
                   </div>
                 </section>
@@ -337,10 +337,10 @@
               <p>18.Performance API.
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_18">Learn More...</button>
                 <section id="features_ipad_18" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/10.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     An implements of <a href="https://developer.mozilla.org/en-US/docs/Web/API/Performance" class="re-link">Performance API</a>
                     <br />
                     The Performance interface represents timing related performance information for the given page.
@@ -360,14 +360,14 @@
               <p>20.NPM Modules (To require() any module on npm in web inspector console <a target="_blank" class="re-link" href="https://gist.github.com/mathisonian/c325dbe02ea4d6880c4e">with browserify</a>)
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_20">Learn More...</button>
                 <section id="features_ipad_20" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     To require() any module on npm in web inspector console <a target="_blank" class="re-link" href="https://gist.github.com/mathisonian/c325dbe02ea4d6880c4e">with browserify</a>
                     <br />
                     Browsers don't have the require method defined, but Node.js does. With Browserify you can write code that uses require in the same way that you would use it in Node.
                     <br />
                     This feature makes MIHTool more powerful and easier for you to debug and optimize your webpages.
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/npm.gif"/>
                   </div>
                 </section>
@@ -394,11 +394,11 @@
 					  	<p>1.iOS Safari 扩展, 支持在线远程打开 Web Inspector 调试 Safari 里打开的页面，支持在Safari 里打开类似于 Chrome DevTool 的内嵌 Web inspector 直接调试 Safari 里打开的页面.
 					  		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_1">展开更多...</button>
                 <section id="features_ipad_zh_1" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/9.jpeg"/>
                     <img src="images/mih/screenshots/3.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     有了 MIHTool 的 iOS Safari 扩展, 你可以在线远程调试 Safari 和 Safari View Controller（App 里调 Safari 组件）打开的页面了.
                     <br />
                     并且 MIHTool 的 iOS Safari 扩展是首个将类 Chrome 的 DevTool 带到 Safari 里的 App, 你可以随时随地用扩展的内嵌 Web inspector 仅用 iPad 就能直接调试 Safari 里打开的页面了.
@@ -413,10 +413,10 @@
 					  	<p>2.内嵌 Web inspector(类似于 Chrome DevTool 或 FireBug):有 Elements,Resources,Network,Timeline,Console 面板.
 					  		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_2">展开更多...</button>
                 <section id="features_ipad_zh_2" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/0.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     内嵌 Web inspector 是 iPad 独占的。你可以直接在自己的iPad上调试自己的页面。
                     <br />
                     与 Chrome DevTools 类似,有 Elements, Resources, Network, Timeline, Console 面板. 并且针对触屏进行了优化，可以进行最大化，最小化，放大缩小。
@@ -432,7 +432,7 @@
               <p>3.远程打开 Web inspector 调试:在电脑(window,mac,linux,仅需装有chrome)上远程调试手机里的页面.
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_3">展开更多...</button>
                 <section id="features_ipad_zh_3" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     在网域内通过远程控制的方式打开Web inspector调试你的页面。
                     <br />
                     与 Chrome DevTools类似,有 Elements,Resources,Network,Timeline,Console 面板.
@@ -441,7 +441,7 @@
                     <br />
                     Web inspector 是基于 <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a> 的,bug 可以报到 <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a> 上。
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/8.jpeg">
                     <img src="images/mih/screenshots/3.jpeg"/>
                   </div>
@@ -460,10 +460,10 @@
               <p>5.HTML 编辑器:查看网页源码;格式化及高亮源码;编辑源码或者新建一个页面并预览结果.
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_5">展开更多...</button>
                 <section id="features_ipad_zh_5" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/2.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     HTML editor 编辑器是iPad独占的功能。查看网页源码;格式化及高亮源码;编辑源码或者新建一个页面并预览结果。
                     <br />
                     当然你也可以通过远程控制将当前页面的源码导出。
@@ -473,14 +473,14 @@
               <p>6.远程控制的HTTP服务器:远程打开链接;远程注入JS脚本到当前页面;远程禁止缓存;远程清除数据;远程导出HAR数据;远程导出网页源码,远程截图…
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_6">展开更多...</button>
                 <section id="features_ipad_zh_6" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     开启 MIHTool 的 HTTP Server 你会得到一个类似 <strong>http://192.168.1.101:1630</strong> 的连接,可以通过局域网内的window,mac,linux,甚至另一台 iPad,访问此连接来远程控制 MIHTool。
                     <br />
                     打开远程控制的连接你会看到很多可用的命令，基本上MIHTool的所有功能都能远程控制操作，如:远程打开链接;远程查看历史;远程注入JS脚本到当前页面;远程禁止缓存;远程清除数据;远程导出HAR数据;远程导出网页源码,远程截图，等等。
                     <br />
                     远程控制的命令是 REST 风格的，你可以写一些自动化脚本来自动化测试你的页面。实现从一台远程电脑控制多台设备同时调试。
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/4.jpeg"/>
                   </div>
                 </section>
@@ -488,10 +488,10 @@
               <p>7.显示页面合成渲染层(Compositing Render Layers).
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_7">展开更多...</button>
                 <section id="features_ipad_zh_7" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/1.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     显示页面合成渲染层(Compositing Render Layers) 和 显示元素的重绘渲染数(Paint Rects) 是帮助你优化页面得到 60FPS 的得力助手。
                      <br />
                      如何优化页面性能请参看
@@ -532,12 +532,12 @@
               <p>17.查看当前页面的HAR.(另推荐 <a class="re-link" href="https://github.com/unbug/logproxy">logproxy</a>)
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_17">展开更多...</button>
                 <section id="features_ipad_zh_17" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     通过 HAR Viewer 查看页面HTTP请求的 waterfall。或者将 HAR 数据导出分析页面加载性能。
                     <br />
                     HAR Viewer 是iPad独有的，在 iPhone 上你也可以通过远程控制导出 HAR 数据然后放到<a class="re-link" href="http://www.softwareishard.com/har/viewer/">Online HAR Viewer</a> 查看(需要去掉 "Validate data before processing?" 复选框的勾选.)
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/5.jpeg"/>
                   </div>
                 </section>
@@ -545,10 +545,10 @@
               <p>18.Performance API.
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_18">展开更多...</button>
                 <section id="features_ipad_zh_18" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/10.jpeg"/>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     实现了部分 <a href="https://developer.mozilla.org/en-US/docs/Web/API/Performance" class="re-link">Performance API</a>
                   </div>
                 </section>
@@ -566,12 +566,12 @@
 						  <p>20.NPM Modules (在 web inspector console 里通过 require() 加载 npm 模块)
                 <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_20">展开更多...</button>
 								<section id="features_ipad_zh_20" class="features-detail collapse in row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <a target="_blank" class="re-link" href="https://gist.github.com/mathisonian/c325dbe02ea4d6880c4e">基于 browserify</a> 在 web inspector console 里通过 require() 加载 npm 模块。
                     <br />
                     丰富的npm模块将让你在 MIHTool 里调试和优化页面变得更加有趣！简直会有无限的可能。
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/npm.gif"/>
                   </div>
                 </section>
