added text for switch weinre

--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
                     <br />
                     Note: If you can't see any logs in Network or Timeline panel, be sure the record circle switcher is <span style="color: red;">RED</span>.
                     <br />
+                    Web inspector is based on <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a>,bug reports please check <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a>.
+                    <br />
+                    MIHTool's weinre server is might not cover your location, which is mean you might have network issue with Web Inspector in Action Extension.
+                    But if you open your web page in MIHTool, and switch to another weinre server for the one in App, you can do this with MIHTool Remote control(With HTTP Server).
                   </div>
                 </section>
               </p>
@@ -213,6 +217,9 @@
                     Please check this <a href="#slide-8" onclick="goToByScroll(8)">video</a> to see how it works.
                     <br />
                     Web inspector is based on <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a>,bug reports please check <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a>.
+                    <br />
+                    MIHTool's weinre server is might not cover your location, which is mean you might have network issue with Web Inspector.
+                    But this can be solve by switch to another weinre server, you can do this with MIHTool Remote control(With HTTP Server).
                   </div>
                 </section>
               </p>
@@ -227,6 +234,9 @@
                     Note: If you can't see any logs in Network or Timeline panel,be sure the record circle switcher is <span style="color: red;">RED</span>.
                     <br />
                     Web inspector is based on <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a>,bug reports please check <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a>.
+                    <br />
+                    MIHTool's weinre server is might not cover your location, which is mean you might have network issue with Web Inspector.
+                    But this can be solve by switch to another weinre server, you can do this with MIHTool Remote control(With HTTP Server).
                   </div>
                   <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/8.jpeg">
@@ -315,7 +325,7 @@
                   </div>
                 </section>
               </p>
-              <p>11.More developer bookmarklets:Firebug,YSlow,JS Console,PageSpeed,GTmetrix…</p>
+              <p>11.More developer bookmarklets:Firebug,YSlow,PageSpeed,GTmetrix…</p>
               <p>12.Evaluating JavaScript in the address bar.</p>
               <p>13.Full screen mode(Shake Device To Toggle Full Screen Mode).</p>
               <p>14.Disable cache.</p>
@@ -407,6 +417,10 @@
                     <br />
                     与 Chrome DevTools 类似,有 Elements, Resources, Network, Timeline, Console 面板.并且针对触屏进行了优化，可以进行最大化，最小化。
                     注意: 如果你的Network 或者 Timeline 面板无数据，需要将圆形的录制开关打开成 <span style="color: red;">红色</span>.
+                    <br />
+                    Web inspector 是基于 <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a> 的,bug 可以报到 <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a> 上。
+                    <br/>
+                    MIHTool 的 weinre 服务可能在你所在的地方有延迟，你用扩展的 Web Inspector 体验可能很差，如果你用 MIHTool 里的 Web Inspector 你可以用 MIHTool 的远程控制的 HTTP 服务器切花自己的 weinre 服务，能得到更好的体验。
                   </div>
                 </section>
 					  	</p>
@@ -426,6 +440,8 @@
                     参看演示<a href="#slide-8" onclick="goToByScroll(8)">视频</a>。
                     <br />
                     Web inspector 是基于 <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a> 的,bug 可以报到 <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a> 上。
+                    <br/>
+                    MIHTool 的 weinre 服务可能在你所在的地方有延迟，你用 Web Inspector 体验可能很差，你可以用 MIHTool 的远程控制的HTTP服务器切花自己的 weinre 服务。
                   </div>
                 </section>
 					  	</p>
@@ -440,6 +456,8 @@
                     注意: 如果你的Network 或者 Timeline 面板无数据，需要将圆形的录制开关打开成 <span style="color: red;">红色</span>.
                     <br />
                     Web inspector 是基于 <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a> 的,bug 可以报到 <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a> 上。
+                    <br/>
+                    MIHTool 的 weinre 服务可能在你所在的地方有延迟，你用 Web Inspector 体验可能很差，你可以用 MIHTool 的远程控制的HTTP服务器切花自己的 weinre 服务。
                   </div>
                   <div class="col-12 col-sm-6">
                     <img src="images/mih/screenshots/8.jpeg">
@@ -523,7 +541,7 @@
                   </div>
                 </section>
               </p>
-              <p>11.实用开发者调试书签类工具(Firebug,YSlow,JS Console,PageSpeed,GTmetrix…).</p>
+              <p>11.实用开发者调试书签类工具(Firebug,YSlow,PageSpeed,GTmetrix…).</p>
               <p>12.在地址栏执行JS脚本.</p>
               <p>13.全屏模式(摇一摇设备切换全屏).</p>
               <p>14.禁止缓存.</p>
